basic styling of all pages complete

--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,12 @@
 }
 
 body {
-  text-align: center;
   margin: auto;
 }
 
 a {
   text-decoration: none !important;
+  color: gray !important;
 }
 
 ul {
@@ -22,7 +22,11 @@ ul {
 }
 
 .postCarousel img {
-  height: 25em;
+  height: 40em;
+}
+
+.postCarousel {
+  height: 40em;
 }
 
 .postContent {
@@ -31,10 +35,149 @@ ul {
   margin-top: 3vmin;
 }
 
-@media (min-width: 800px) {
+.strike-through-line {
+  color: #000000;
+  border-color: #000000;
+  border-top: 1px solid #111;
+  margin-top: 28px;
+}
+
+.strike-through-text {
+  color: #000000;
+  border-color: #000000;
+  padding-left: 10px;
+  top: -26px;
+  font-size: 40px;
+  position: relative;
+  top: -25px;
+  background: #fff;
+  padding-right: 10px;
+  display: inline-block;
+  font: 40px Proxima Nova Bd;
+  font-style: italic;
+  text-transform: uppercase;
+}
+
+.commentLogin {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 2vmin;
+}
+
+.commentLoginBtn {
+  border: none !important;
+  padding-left: 1px !important;
+}
+
+.commentLoginBtn:hover {
+  color: black !important;
+  background: none !important;
+}
+
+.commentLoginIcon {
+  color: #6c757d;
+}
+
+.commentIcon {
+  height: 3em;
+  width: 2.5em;
+  color: gray;
+  margin-left: 1vmin;
+}
+
+.commentInput {
+  width: 100%;
+  text-align: left;
+  padding-left: 2vmin;
+  margin-left: 1vmin;
+  border: 0.3px solid gray;
+  border-top: none;
+  border-bottom: none;
+}
+
+.commentInput:focus-visible {
+  outline: none !important;
+  border: 0.3px solid plum !important;
+  border-top: none;
+  border-bottom: none;
+}
+
+.commentForm {
+  width: 80%;
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  border-radius: 20px;
+  border: 0.5px solid grey;
+}
+
+.commentDisplay {
+  align-items: flex-start;
+  /* border: 0.2px solid gray; */
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  margin: 2vmin auto;
+  /* padding: 0.2vmin 0 0 1vmin; */
+  width: 80%;
+}
+
+.commentFooter {
+  color: rgba(0, 0, 255, 0.482);
+  font-size: 13px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.DisplayPostZigZag {
+  display: flex;
+  align-items: center;
+}
+
+.DisplayPostZigZag img {
+  width: 50%;
+  border-radius: 5px;
+}
+
+.catUL {
+  display: flex;
+  flex-direction: column;
+  /* margin: 5vmin; */
+}
+
+.catUL li {
+  display: flex;
+  width: 100%;
+  flex-wrap: nowrap;
+  align-items: center;
+  padding-bottom: 30px;
+}
+
+.catUL img {
+  width: 50%;
+  height: 30%;
+  border-radius: 5px;
+}
+
+.ulText {
+  margin: auto;
+  font-size: 40px;
+}
+
+@media (min-width: 980px) {
   .postCarousel {
-    width: 50em;
-    height: 25em;
+    width: 60em;
+    height: 50em;
     margin: auto;
   }
+
+  .postCarousel img {
+    height: 50em;
+  }
 }
+
+/* <div className="strike-through-line">
+<div className="strike-through-text">Line Break</div>
+</div> */
